genera pdf dummy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h2>Certificate Generator</h2>
       
-      <app-participant-list></app-participant-list>
+
+      <router-outlet></router-outlet>
 
     </div>
   </div>
