--- a/src/app/participants/participant-detail/participant-detail.component.html
+++ b/src/app/participants/participant-detail/participant-detail.component.html
@@ -1,3 +1,25 @@
-<p>
-  participant-detail works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <h1> {{participant.name}} </h1>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-12">
+     {{participant.email}}
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+     {{participant.location}}
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-12">
+    <div class="btn-group">
+      
+      <app-certificate-view></app-certificate-view>
+    </div>
+  </div>
+</div>
