--- a/src/app/participants/participant-list/participant-list.component.html
+++ b/src/app/participants/participant-list/participant-list.component.html
@@ -1,10 +1,40 @@
-<h2>Participants</h2>
+
 <nav>
   <a style="cursor: pointer;" (click)="onFetchData()">Get list of Participants</a>
 </nav>
+<div class="container" *ngIf="participants.length>0">
+  <h2>Participants</h2>
+  <div class="row">
+    <div class="col-md-7">
+      <table class="table table-hover" >
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Location</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr
+          *ngFor="let participant of participants; let i = index"
+          style="cursor: pointer;"
+          [routerLink]="[i]"
+          routerLinkActive="active">
+            <th scope="row">{{participant.id}}</th>
+            <td>{{participant.name}}</td>
+            <td>{{participant.email}}</td>
+            <td>{{participant.location}}</td>
+            <td>sent</td>
+          </tr>
+       </tbody>
+      </table>
+    </div>
 
-<ul>
-  <li *ngFor="let participant of participants" >
-    <span>{{participant.id}}</span> {{participant.name}} | {{participant.location}} | {{participant.email}}
-  </li>
-</ul>
+    <div class="col-md-5">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+
+</div>
